fix: resolve npm security vulnerabilities
- Fix glob and brace-expansion vulnerabilities via npm audit fix
- Add overrides for tmp package to resolve dependency vulnerabilities
- All vulnerabilities resolved (0 vulnerabilities found)

--- a/package.json
+++ b/package.json
@@ -82,5 +82,8 @@
     "prettier-eslint-cli": "^8.0.1",
     "puppeteer": "^24.30.0",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "tmp": "^0.2.5"
   }
 }
